fix text wrapping in html templates

--- a/web-app/src/main/resources/static/css/style.css
+++ b/web-app/src/main/resources/static/css/style.css
@@ -52,6 +52,11 @@ a {
     color: #111;
 }
 
+#card {
+    border-radius: 5px;
+    box-shadow: 4px 2px 6px #e9ecef;
+}
+
 a:hover {
     color: #555;
 }
